--- a/neu/webdev/package.json
+++ b/neu/webdev/package.json
@@ -8,7 +8,11 @@
     "express": "^4.13.4",
     "mongoose": "^4.9.1",
     "multer": "^1.3.0",
-    "q": "^1.4.1"
+    "q": "^1.4.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "cookie-parser": "^1.4.3",
+    "express-session": "^1.14.2"
   },
   "devDependencies": {},
   "scripts": {
