--- a/neu/webdev/package.json
+++ b/neu/webdev/package.json
@@ -12,7 +12,8 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "cookie-parser": "^1.4.3",
-    "express-session": "^1.14.2"
+    "express-session": "^1.14.2",
+    "passport-google-oauth": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
