Session Managment for local and facebook

--- a/neu/webdev/package.json
+++ b/neu/webdev/package.json
@@ -13,7 +13,8 @@
     "passport-local": "^1.0.0",
     "cookie-parser": "^1.4.3",
     "express-session": "^1.14.2",
-    "passport-google-oauth": "^1.0.0"
+    "passport-google-oauth": "^1.0.0",
+    "passport-facebook": "2.1.1"
   },
   "devDependencies": {},
   "scripts": {
