--- a/neu/webdev/package.json
+++ b/neu/webdev/package.json
@@ -14,7 +14,8 @@
     "cookie-parser": "^1.4.3",
     "express-session": "^1.14.2",
     "passport-google-oauth": "^1.0.0",
-    "passport-facebook": "2.1.1"
+    "passport-facebook": "2.1.1",
+    "bcrypt-nodejs": "0.0.3"
   },
   "devDependencies": {},
   "scripts": {
